--- a/blog/src/components/Header.astro
+++ b/blog/src/components/Header.astro
@@ -7,7 +7,7 @@ import StLogo from "../assets/23St-logo.svg";
 <header>
   <nav>
     <div>
-      <Image src={StLogo} priority alt="23St Logo" width="100" height="80" />
+      <Image src={StLogo} priority alt="23St Logo" width="90" />
     </div>
     <div class="internal-links">
       <HeaderLink href="/">Home</HeaderLink>
