--- a/trackstack/app/src/layouts/Layout.astro
+++ b/trackstack/app/src/layouts/Layout.astro
@@ -1,22 +1,37 @@
 <!doctype html>
 <html lang="en">
-	<head>
-		<meta charset="UTF-8" />
-		<meta name="viewport" content="width=device-width" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<meta name="generator" content={Astro.generator} />
-		<title>TrackStack</title>
-	</head>
-	<body>
-		<slot />
-	</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <meta name="generator" content={Astro.generator} />
+    <title>TrackStack</title>
+
+	<link rel="manifest" href="/manifest.webmanifest" />
+
+    <!-- iOS Safari -->
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="default" />
+    <meta name="apple-mobile-web-app-title" content="TrackStack" />
+    <link rel="apple-touch-icon" href="/ios/180.png" />
+    <link rel="apple-touch-icon" sizes="152x152" href="/ios/152.png" />
+    <link rel="apple-touch-icon" sizes="120x120" href="/ios/120.png" />
+
+    <!-- General -->
+    <link rel="icon" type="image/png" sizes="32x32" href="/ios/32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/ios/16.png" />
+    <meta name="theme-color" content="#ffffff" />
+  </head>
+  <body>
+    <slot />
+  </body>
 </html>
 
 <style>
-	html,
-	body {
-		margin: 0;
-		width: 100%;
-		height: 100%;
-	}
+  html,
+  body {
+    margin: 0;
+    width: 100%;
+    height: 100%;
+  }
 </style>
